[package]
name = "bisque-raft"
version = "0.1.0"
edition = "2024"
authors = ["Bisque Team"]
description = "Tokio runtime adapter for OpenRaft consensus"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bisque-io/bisque"
keywords = ["raft", "consensus", "distributed", "async"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["tls"]
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile"]

[dependencies]
arc-swap = { workspace = true }
bisque-alloc = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
bytes = { workspace = true }
crc-fast = { workspace = true }
congee = { workspace = true }
crossfire = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
memmap2 = { workspace = true }
openraft = { workspace = true, features = ["tokio-rt"] }
parking_lot = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
serde = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true, optional = true }
tracing = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
bincode = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
futures-lite = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true }

[[example]]
name = "multi_raft_cluster"
path = "examples/multi_raft_cluster.rs"

[[example]]
name = "network_stress_test"
path = "examples/network_stress_test.rs"

[[example]]
name = "storage_bench"
path = "examples/storage_bench.rs"

[profile.release]
debug = true
