[package]
name = "bisque-runtime"
version = "0.1.0"
edition = "2024"
description = "Custom compio proactor integration for Bisque runtime"
license = "MIT OR Apache-2.0"

[dependencies]
# Compio - the custom proactor library
# compio = { version = "0.17", default-features = false, features = [
#     "dispatcher",
#     "iouring",
#     "rio",
#     "poller",
# ] }

# Async runtime support
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }

# I/O types
bytes = "1"
mio = { version = "1.0", features = ["os-poll", "net", "os-ext"] }

# Utilities
parking_lot = "0.12"
once_cell = "1.21"
tracing = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1"

wasmtime = { version = "40.0", default-features = false, features = [
    "cranelift",
    "async",
    "runtime",
    "wat",
] }
wat = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
async-std = "1"

[features]
# default = ["iouring"]
# iouring = ["compio/iouring"]
# rio = ["compio/rio"]
# poller = ["compio/poller"]
