[package]
name = "bisque-alloc-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bisque-alloc = { path = ".." }
arbitrary = { version = "1", features = ["derive"] }

[[bin]]
name = "fuzz_bytes"
path = "fuzz_targets/fuzz_bytes.rs"
doc = false

[[bin]]
name = "fuzz_tlrc"
path = "fuzz_targets/fuzz_tlrc.rs"
doc = false

[[bin]]
name = "fuzz_heap"
path = "fuzz_targets/fuzz_heap.rs"
doc = false

[[bin]]
name = "fuzz_art"
path = "fuzz_targets/fuzz_art.rs"
doc = false

[[bin]]
name = "fuzz_spsc"
path = "fuzz_targets/fuzz_spsc.rs"
doc = false
